[project]
name = "comfyui-videohelpersuite"
description = "Nodes related to video workflows"
version = "1.3.8-fork"
license = { file = "LICENSE" }
dependencies = ["opencv-python", "imageio-ffmpeg"]

[project.urls]
Repository = "https://github.com/nikkuexe/ComfyUI-VideoHelperSuite"

#  Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "nikkuexe"
DisplayName = "ComfyUI-VideoHelperSuite (fork)"
Icon = ""
